<resources>
    <string name="app_name">HKR Health</string>
    <string name="app_description">Your pocket personal trainer</string>


    <!-- Strings used for navigation menu -->
    <string name="nav_workout_selection">Workouts</string>
    <string name="nav_workout_history">Workout History</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>


    <!-- Strings used in all kinds of workout layouts -->
    <string name="exercise">Exercise</string>
    <string name="comment">Write a comment</string>
    <string name="selected_comment">Comment: </string>
    <string name="rating">Rate this exercise</string>
    <string name="save">Save</string>
    <string name="reps">Reps</string>
    <string name="sets">Set</string>
    <string name="weight">Weight</string>
    <string name="hypertrophy">Hypertrophy</string>
    <string name="strength">Strength</string>
    <string name="cardio">Cardio</string>
    <string name="lean">Lean</string>
    <string name="heaviest_weight">Heaviest weight</string>
    <string name="total_amount_reps">Total reps</string>
    <string name="total_weight_lifted">Total weight lifted</string>
    <string name="zero">0</string>
    <string name="percentual_increase_header">Increase in weight lifted since you started:</string>

    <!-- Strings used in the different push workouts -->
    <string name="bench_press">Bench press</string>
    <string name="dumbell_press">Dumbell press</string>
    <string name="incline_bench_press">Incline bench press</string>
    <string name="incline_dumbell_press">Incline dumbell press</string>
    <string name="flyes">Flyes</string>
    <string name="dips">Dips</string>
    <string name="shoulder_barbell_press">Shoulder barbell press</string>
    <string name="shoulder_dumbell_press">Shoulder dumbell press</string>
    <string name="shoulder_side_raises">Side raises</string>
    <string name="pushdown">Pushdown</string>
    <string name="french_press">French press</string>

    <!-- Strings used in the different pull(B) workouts -->
    <string name="deadlift">Deadlift</string>
    <string name="barbell_row">Barbell row</string>
    <string name="chin_up">Chin-up</string>
    <string name="one_arm_dumbbell_row">One Arm dumbbell row</string>
    <string name="bent_over_lateral_raise">Bent-over lateral raise</string>
    <string name="incline_dumbell_curl">Incline dumbbell curl</string>
    
    <!-- Strings used in the different legs(C) workouts -->
    <string name="squat">Squats</string>
    <string name="leg_press">Leg press</string>
    <string name="romanian_deadlift">Romanian deadlift</string>
    <string name="leg_curl">Leg curl</string>
    <string name="standing_calf_raise">Standing calf raise</string>
    <string name="lying_leg_curl">Hamstring curl</string>
    
    <!-- Strings for youtube -->
    <string name="youtube_example">Example</string>

    <!-- Strings used in goalsetting -->
    <string name="weightGoal">Weight Goal</string>
    <string name="currentWeight">Insert Current Weight</string>
    <string name="yourCurrentGoal">Your Current Goal: </string>

    <string name="popUp">Go to Goal Setting and enter your weight!</string>



    <!-- Strings used in statistics fragment -->
    <string name="ACTV_hint">Enter a exercise..</string>
    <string name="ACTV_reps_hint">Enter a number..</string>
    <string name="confirm">Confirm</string>
    <string name="no_data_found">No data found</string>
    <string name="exercise_statistics">Exercise statistics</string>
    <string name="goalsetting_statistics">Goal setting statistics</string>
    <string name="hyper_statistics">Hypertrophy workout statistics</string>
    <string name="strength_statistics">Strength workout statistics</string>
    <string name="goalsetting_goal_comment">Current goal weight is: </string>
    <string name="goalsetting_current_comment">Latest reported weight: </string>
    <string name="goalsetting_reach_goal_comment">To reach your goal you need to lose: </string>

    <!-- String array containing all exercises -->
    <string-array name="array_exercises">
        <item name="bench_press">Bench press</item>
        <item name="dumbell_press">Dumbell press</item>
        <item name="incline_bench_press">Incline bench press</item>
        <item name="incline_dumbell_press">Incline dumbell press</item>
        <item name="flyes">Flyes</item>
        <item name="dips">Dips</item>
        <item name="shoulder_barbell_press">Shoulder barbell press</item>
        <item name="shoulder_dumbell_press">Shoulder dumbell press</item>
        <item name="shoulder_side_raises">Side raises</item>
        <item name="pushdown">Pushdown</item>
        <item name="french_press">French press</item>
        <item name="deadlift">Deadlift</item>
        <item name="barbell_row">Barbell row</item>
        <item name="chin_up">Chin-up</item>
        <item name="one_arm_dumbell_row">One Arm dumbell row</item>
        <item name="bent_over_lateral_raise">Bent-over lateral raise</item>
        <item name="incline_curl">Incline dumbell curl</item>
        <item name="squat">Squats</item>
        <item name="leg_press">Leg press</item>
        <item name="romanian_deadlift">Romanian deadlift</item>
        <item name="leg_curl">Leg curl</item>
        <item name="hamstring_curl">Hamstring curl</item>
        <item name="standing_calf_raise">Standing calf raise</item>
        <item name="military_press">Military press</item>
        <item name="power_clean">Power clean</item>
    </string-array>

    <!-- Strings used in workoutdesign -->
    <string name="hyperworkout_a">Workout A</string>
    <string name="hyperworkout_b">Workout B</string>
    <string name="hyperworkout_c">Workout C</string>
    <string name="hyperworkout_d">Workout D</string>
    <string name="hyperworkout_e">Workout E</string>
    <string name="hyperworkout_f">Workout F</string>
    <string name="workout_a">Pull exercises: 1/3</string>
    <string name="workout_b">Push exercises: 2/3</string>
    <string name="workout_c">3/3</string>
    <string name="strengthworkout_a">Strengthworkout 1/2</string>
    <string name="strengthworkout_b">Strengthworkout 2/2</string>
    <string name="strengthworkout_A_description">Bench-press, dead-lift and squats. \n 5 reps 3 sets.</string>
    <string name="strengthworkout_B_description">Military-press, power-clean and squats. \n 5 reps 3 sets.</string>
    <string name="hitworkout_a">Hiit A</string>
    <string name="view_history_hyper">View history</string>
    <string name="view_history_streng">View strength history</string>
    <string name="view_history_lean">View lean history</string>
    <string name="PushPullLegs1">PPL 1/3</string>
    <string name="PushPullLegs2">PPL 2/3</string>
    <string name="PushPullLegs3">PPL 3/3</string>
    <string name="PPL1">Here you perform chest, shoulder and triceps-exercises. 10-12 reps each.</string>
    <string name="PPL2">Here you perform deadlift, dumbbell lifts and barbell rows. 10-12 reps each.</string>
    <string name="PPL3">Here you perform legpress, squats and other leg-exercises. 10-12 reps each.</string>
    <string name="Hiit_A">7-minute workout with different exercises</string>






    <!-- String used in splash/welcome screen -->
    <string name="eat">Eat</string>
    <string name="sleep">Sleep</string>
    <string name="workout">Exercise</string>
    <string name="eat_information">Eat healthy to improve your fitness lifestyle. </string>
    <string name="sleep_information">Boost your training with at least 7 hours of sleep. </string>
    <string name="workout_information">Use HKR Health as your "personal trainer" to achieve maximum success! </string>



    <!-- Strings used for HIIT workout -->
    <string name="row1"><b>For 30 seconds each, do:</b> "\n" "\n" Jumping jacks
        "\n" Wall sit "\n" Push-ups "\n" Crunches
        "\n" Chair step-ups "\n" Squats "\n" Tricep dips
        "\n" Planks "\n" Run on the spot "\n" Lunges
        "\n" Push-ups with wide rotation "\n" Side planks
        "\n" "\n" <b>Rest for 10 seconds between moves.</b> </string>

    <!-- Strings used for Strength Workout -->
    <string name="military_press">Military Press</string>
    <string name="repInfo1">5 reps for 3 sets</string>
    <string name="repInfo2">5 reps for 1 set</string>
    <string name="repInfo3">3 reps for 5 sets</string>
    <string name="power_clean">Power clean</string>

    <!-- Strings used in workout statistics -->
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="legs">Legs</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="total_weight_lifted_all_workouts">The total weight you have lifted: </string>

</resources>
