<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group> android:checkableBehavior="single">
        <item android:id="@+id/nav_workout_selection"
            android:title="@string/nav_workout_selection"
            android:icon="@drawable/icons8_weightlift" />
        <item android:id="@+id/nav_workout_history"
            android:title="@string/nav_workout_history"
            android:icon="@drawable/icons8_historical" />
    </group>

    <item android:title="Overview">
        <menu>
            <item android:id="@+id/nav_statistics"
                android:title="@string/nav_statistics"
                android:icon="@drawable/icons8_normal_distribution_histogram"
                />
            <item android:id="@+id/nav_goalsetting"
                android:icon="@drawable/icons8trophy_2"
                android:title="Goal settings"
                />
        </menu>
    </item>


</menu>