<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="50"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/exercise"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/green"
            android:id="@+id/selectedExerciseTV"
            android:layout_weight="50"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/sets"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@color/green"
            android:id="@+id/selectedSetTV"
            android:layout_weight="50"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="50">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/green"
            android:id="@+id/selectedRepsTV"
            android:text="@string/reps"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:id="@+id/selectedWeightTV"
            android:textColor="@color/black"
            android:background="@color/green"
            android:text="@string/weight"
            android:textSize="20sp"
            />

    </LinearLayout>

</LinearLayout>