<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/exerciseStatisticsButton"
        android:layout_width="238dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/deeppurple"
        android:text="@string/exercise_statistics"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/goalsettingStatisticsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <Button
        android:id="@+id/goalsettingStatisticsButton"
        android:layout_width="240dp"
        android:layout_height="98dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/deeppurple"
        android:text="@string/goalsetting_statistics"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <Button
        android:id="@+id/hyperWorkoutStatisticsButton"
        android:layout_width="240dp"
        android:layout_height="98dp"
        android:layout_margin="20dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="20dp"
        android:background="@color/deeppurple"
        android:text="@string/hyper_statistics"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goalsettingStatisticsButton" />

    <Button
        android:id="@+id/strengthWorkoutStatisticsButton"
        android:layout_width="240dp"
        android:layout_height="98dp"
        android:layout_margin="20dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/deeppurple"
        android:text="@string/strength_statistics"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hyperWorkoutStatisticsButton"
        app:layout_constraintVertical_bias="0.102" />

</android.support.constraint.ConstraintLayout>