<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="160dp"
        android:layout_height="190dp"
        android:layout_margin="10dp"
        android:id="@+id/hypertrophyHistoryButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/icons8_historical"
                android:padding="10dp"
                android:src="@drawable/icons8_curls_with_dumbbells" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hypertrophy"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/light_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/hyperworkout_a"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/strengthHistoryButton"
        android:text="@string/strength"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/hypertrophyHistoryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/leanHistoryButton"
        android:text="@string/hypertrophy"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/strengthHistoryButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/hypertrophy"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
</android.support.constraint.ConstraintLayout>