<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_menu_drawerlayout"
    android:background="@drawable/background_splash_screem"
    tools:context=".MainActivity"
    tools:openDrawer="start"
    >

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fcfcfc"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                app:layout_constraintBottom_toTopOf="@+id/card_viewC"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/card_viewB"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundpurple"
                        android:padding="10dp"
                        android:src="@drawable/icons8_no_food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/eat"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/circlebackgroundpurple" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/eat_information"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_viewB"
                app:layout_constraintBottom_toTopOf="@id/card_viewC"
                app:layout_constraintLeft_toRightOf="@+id/card_viewA"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="160dp"
                android:layout_height="190dp"
                android:layout_margin="10dp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundyellow"
                        android:padding="10dp"
                        android:src="@drawable/icons8_sleeping_in_bed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sleep"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/circlebackgroundyellow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/sleep_information"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="341dp"
                android:layout_height="198dp"
                android:layout_margin="25dp"
                android:clickable="false"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/circlebackgroundtomato"
                        android:padding="10dp"
                        android:src="@drawable/icons8treadmill" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/workout"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/circlebackgroundtomato" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="49dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/workout_information"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>


</android.support.v4.widget.DrawerLayout>
